--- a/apps/office-addin/src/taskpane/taskpane.html
+++ b/apps/office-addin/src/taskpane/taskpane.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Klicker UZH Task Pane Add-in</title>
+    <title>KlickerUZH</title>
 
     <!-- Office JavaScript API -->
     <!-- <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script> -->
