reformat with prettier

--- a/apps/office-addin/src/taskpane/taskpane.html
+++ b/apps/office-addin/src/taskpane/taskpane.html
@@ -1,13 +1,12 @@
 <!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license. -->
 <!-- See LICENSE in the project root for license information -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-framework="typescript">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>KlickerUZH</title>
 
     <!-- Office JavaScript API -->
@@ -18,10 +17,9 @@
 
     <!-- Template styles -->
     <!-- <link href="taskpane.css" rel="stylesheet" type="text/css" /> -->
-</head>
+  </head>
 
-<body class="ms-font-m ms-Fabric">
+  <body class="ms-font-m ms-Fabric">
     <div id="container"></div>
-</body>
-
+  </body>
 </html>
