--- a/apps/office-addin/src/content/content.html
+++ b/apps/office-addin/src/content/content.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-framework="typescript">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>KlickerUZH</title>
 
     <!-- Office JavaScript API -->
@@ -15,10 +14,9 @@
 
     <!-- Template styles -->
     <link href="output.css" rel="stylesheet" type="text/css" />
-</head>
+  </head>
 
-<body class="ms-font-m ms-Fabric">
+  <body class="ms-font-m ms-Fabric">
     <div id="container"></div>
-</body>
-
+  </body>
 </html>
