chore: rename learning element and micro session

--- a/email/23FS Beta Notification.html
+++ b/email/23FS Beta Notification.html
@@ -157,7 +157,7 @@
         .es-infoblock a {
           font-size: 12px !important;
         }
-        *[class='gmail-fix'] {
+        *[class="gmail-fix"] {
           display: none !important;
         }
         .es-m-txt-c,
@@ -879,7 +879,7 @@
                                           "
                                         >
                                           Microlearning (new smartphone app) and
-                                          Learning Elements (in OLAT)&nbsp;
+                                          Practice Quizzes (in OLAT)&nbsp;
                                         </p>
                                       </li>
                                       <li
@@ -1340,7 +1340,7 @@
                                           font-size: 14px;
                                         "
                                         ><u
-                                          >Learning Elements, Microlearning</u
+                                          >Practice Quizzes, Microlearning</u
                                         ></a
                                       >
                                       and Collaborative Group Activities, as
