chore: replace department name and email adresses

--- a/email/Migration Success.html
+++ b/email/Migration Success.html
@@ -135,7 +135,7 @@
         .es-infoblock a {
           font-size: 12px !important;
         }
-        *[class='gmail-fix'] {
+        *[class="gmail-fix"] {
           display: none !important;
         }
         .es-m-txt-c,
@@ -445,9 +445,7 @@
                                         color: #333333;
                                         font-size: 11px;
                                       "
-                                    >
-
-                                    </p>
+                                    ></p>
                                   </td>
                                 </tr>
                               </table>
@@ -1127,7 +1125,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      klicker@bf.uzh.ch
+                                      klicker@df.uzh.ch
                                     </p>
                                   </td>
                                 </tr>
