--- a/email/Migration Failed.html
+++ b/email/Migration Failed.html
@@ -135,7 +135,7 @@
         .es-infoblock a {
           font-size: 12px !important;
         }
-        *[class='gmail-fix'] {
+        *[class="gmail-fix"] {
           display: none !important;
         }
         .es-m-txt-c,
@@ -678,7 +678,7 @@
                                       get in touch with us at
                                       <a
                                         target="_blank"
-                                        href="mailto:klicker@bf.uzh.ch?subject=KlickerUZH%20Migration%20Unsuccessful"
+                                        href="mailto:klicker@df.uzh.ch?subject=KlickerUZH%20Migration%20Unsuccessful"
                                         style="
                                           -webkit-text-size-adjust: none;
                                           -ms-text-size-adjust: none;
@@ -690,7 +690,7 @@
                                             'helvetica neue', helvetica, arial,
                                             sans-serif;
                                         "
-                                        >klicker@bf.uzh.ch</a
+                                        >klicker@df.uzh.ch</a
                                       >
                                       so that we can help you resolve this
                                       issue.<br type="_moz" />
@@ -1089,7 +1089,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      klicker@bf.uzh.ch
+                                      klicker@df.uzh.ch
                                     </p>
                                   </td>
                                 </tr>
