chore: change department name

--- a/email/Migration Failed.html
+++ b/email/Migration Failed.html
@@ -967,7 +967,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      Department of Banking and Finance
+                                      Department of Finance
                                     </p>
                                     <p
                                       style="
