--- a/email/Migration Success.html
+++ b/email/Migration Success.html
@@ -1003,7 +1003,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      Department of Banking and Finance
+                                      Department of Finance
                                     </p>
                                     <p
                                       style="
