--- a/email/Migration Request.html
+++ b/email/Migration Request.html
@@ -1016,7 +1016,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      Department of Banking and Finance
+                                      Department of Finance
                                     </p>
                                     <p
                                       style="
