chore: replace department name and email addresses with updated naming (#4115)

--- a/email/Migration Request.html
+++ b/email/Migration Request.html
@@ -135,7 +135,7 @@
         .es-infoblock a {
           font-size: 12px !important;
         }
-        *[class='gmail-fix'] {
+        *[class="gmail-fix"] {
           display: none !important;
         }
         .es-m-txt-c,
@@ -763,7 +763,7 @@
                                       please contact us at
                                       <a
                                         target="_blank"
-                                        href="mailto:klicker@bf.uzh.ch"
+                                        href="mailto:klicker@df.uzh.ch"
                                         style="
                                           -webkit-text-size-adjust: none;
                                           -ms-text-size-adjust: none;
@@ -775,7 +775,7 @@
                                             'helvetica neue', helvetica, arial,
                                             sans-serif;
                                         "
-                                        >klicker@bf.uzh.ch</a
+                                        >klicker@df.uzh.ch</a
                                       >.
                                     </p>
                                     <p
@@ -1016,7 +1016,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      Department of Banking and Finance
+                                      Department of Finance
                                     </p>
                                     <p
                                       style="
@@ -1138,7 +1138,7 @@
                                         font-size: 12px;
                                       "
                                     >
-                                      klicker@bf.uzh.ch
+                                      klicker@df.uzh.ch
                                     </p>
                                   </td>
                                 </tr>
