--- a/apps/office-addin/src/content/content.html
+++ b/apps/office-addin/src/content/content.html
@@ -7,7 +7,10 @@
     <title>KlickerUZH</title>
 
     <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
+    <script
+      type="text/javascript"
+      src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"
+    ></script>
 
     <!-- Template styles -->
     <link href="output.css" rel="stylesheet" type="text/css" />
